fixing a gap

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -51,15 +51,13 @@ section h2 {
     height: 20px;
 }
 
-/* Vertical Menu for Small Screens */
 .nav-list {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     gap: 20px;
-    transition: transform 0.3s ease-in-out;
-}
+    }
 
 .nav-list li a {
     color: #ffffff; /* White text */
@@ -96,7 +94,7 @@ section h2 {
         display: flex;
         flex-direction: column; /* Make the menu vertical */
         position: absolute;
-        top: 60px; /* Position below the navbar */
+        top: 41px; /* Position below the navbar */
         right: 0;
         background-color: #35424a; /* Dark blue background */
         width: 100%; /* Full width */
